--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   web:
     build: .
@@ -7,4 +9,16 @@ services:
     ports:
       - "8000:8000"
     env_file:
-    - .env
+      - .env
+
+  locust:
+    build: .
+    command: locust -f locustfile.py --host http://web:8000
+    volumes:
+      - .:/app
+    ports:
+      - "8089:8089"
+    env_file:
+      - .env
+    depends_on:
+      - web
