--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 ConfigArgParse==1.7
 Django==4.2
+django-prometheus==2.3.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 Flask==3.1.0
@@ -20,6 +21,7 @@ Jinja2==3.1.6
 locust==2.33.0
 MarkupSafe==3.0.2
 msgpack==1.1.0
+prometheus_client==0.21.1
 psutil==7.0.0
 PyJWT==2.10.1
 python-dotenv==1.0.1
