grafana 폴더 생성 docker-compose.yml에 grafana 컨테이너 생성

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,16 @@ services:
       - "9090:9090"
     depends_on:
       - web
+  
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+
+volumes:
+  grafana_data:
