--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,5 +4,6 @@ global:
 
 scrape_configs:
   - job_name: 'django'
+    metrics_path: '/metrics/metrics'
     static_configs:
       - targets: ['web:8000']
